// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrivateKeyFormDialogAdd Button create private Key Renders the component 1`] = `
<fragment-stub><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" data-test="createKey-btn">Add Private Key</button>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`PrivateKeyFormDialogAdd Dialog opened Renders the component 1`] = `
<fragment-stub><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" data-test="createKey-btn">Add Private Key</button>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
